--- a/Ecomerce/Ecomerce/Views/Shared/_Layout.cshtml
+++ b/Ecomerce/Ecomerce/Views/Shared/_Layout.cshtml
@@ -48,6 +48,7 @@
                                         <li>@Html.ActionLink("Categories", "Index", "Categories")</li>
                                         <li>@Html.ActionLink("Customers", "Index", "Customers")</li>
                                         <li>@Html.ActionLink("Products", "Index", "Products")</li>
+                                        <li>@Html.ActionLink("Suppliers", "Index", "Suppliers")</li>
                                         <li>@Html.ActionLink("Taxes", "Index", "Taxes")</li>
                                         <li>@Html.ActionLink("WareHouses", "Index", "WareHouses")</li>
                                     </ul>
